--- a/environment.yml
+++ b/environment.yml
@@ -9,10 +9,11 @@ dependencies:
   - numpy=1.18.1
   - pandas=1.0.3
   - pip=20.0.2
-  - python=3.8.2
+  - python=3.7.7
   - scipy=1.4.1
   - seaborn=0.10.0
   - statsmodels=0.11.1
+  - tensorflow=2.1.0
   - pip:
     - pmdarima==1.6.0
     - scikit-learn==0.23.0
