--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,7 +1,7 @@
 name: hds_forecast
 channels:
-  - conda-forge
   - defaults
+  - conda-forge
 dependencies:
   - jupyterlab=2.1.2
   - matplotlib=3.2.1
@@ -14,9 +14,9 @@ dependencies:
   - scipy=1.4.1
   - seaborn=0.10.0
   - statsmodels=0.11.1
-  - tensorflow=2.0.0
   - pip:
+    - tensorflow==2.3.1
     - pmdarima==1.6.0
     - scikit-learn==0.23.0
-    - fbprophet==0.6
+    - fbprophet==0.7.1
     - forecast-tools==0.1.5
