--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - numpy=1.18.1
   - pandas=1.0.3
   - pip=20.0.2
+  - plotly=4.13.0
   - python=3.7.7
   - pytorch=1.4.0
   - scipy=1.4.1
