--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,6 +3,7 @@ channels:
   - defaults
   - conda-forge
 dependencies:
+  - ipywidgets=7.5.1
   - jupyterlab=2.1.2
   - matplotlib=3.2.1
   - nodejs=10.13.0
@@ -10,13 +11,14 @@ dependencies:
   - numpy=1.18.1
   - pandas=1.0.3
   - pip=20.0.2
-  - plotly=4.13.0
+  - plotly=4.14.1
   - python=3.7.7
   - pytorch=1.4.0
   - scipy=1.4.1
   - seaborn=0.10.0
   - statsmodels=0.11.1
   - pip:
+    - iprogress==0.4
     - tensorflow==2.3.1
     - pmdarima==1.6.0
     - scikit-learn==0.23.0
