--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,26 +1,24 @@
-name: hds_forecast
+name: hds_forecast_2022
 channels:
-  - defaults
   - conda-forge
 dependencies:
-  - ipywidgets=7.5.1
-  - jupyterlab=2.1.2
-  - matplotlib=3.2.1
-  - nodejs=10.13.0
-  - notebook=6.0.3
-  - numpy=1.18.1
-  - pandas=1.0.3
-  - pip=20.0.2
-  - plotly=4.14.1
-  - python=3.7.7
-  - pytorch=1.4.0
-  - scipy=1.4.1
-  - seaborn=0.10.0
+  - ipywidgets=7.6.5
+  - jupyterlab=3.2.4
+  - jupyterlab-plotly-extension=1.0.0
+  - matplotlib=3.5.0
+  - numpy=1.21.4
+  - pandas=1.3.4
+  - pip=21.0.1
+  - plotly=5.4.0
+  - python=3.8.8
+  - pytorch==1.10.0
+  - scipy=1.7.3
+  - seaborn=0.11.2
   - statsmodels=0.11.1
   - pip:
-    - iprogress==0.4
-    - tensorflow==2.3.1
+    - tensorflow==2.7.0
     - pmdarima==1.6.0
     - scikit-learn==0.23.0
-    - fbprophet==0.7.1
-    - forecast-tools==0.1.5
+    - pystan==2.19.1.1
+    - prophet==1.0.1
+    - forecast-tools==0.1.6
