--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,6 +5,7 @@ dependencies:
   - ipywidgets=7.6.5
   - jupyterlab=3.2.4
   - jupyterlab-plotly-extension=1.0.0
+  - jupyterlab-spellchecker=0.7.2
   - matplotlib=3.5.0
   - numpy=1.21.4
   - pandas=1.3.4
