--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -17,7 +17,7 @@ dependencies:
   - seaborn=0.11.2
   - statsmodels=0.11.1
   - pip:
-    - tensorflow==2.7.0
+    - tensorflow-cpu==2.7.0
     - pmdarima==1.6.0
     - scikit-learn==0.23.0
     - pystan==2.19.1.1
