--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,25 +1,25 @@
-name: hds_forecast
+name: hds_forecast_2023
 channels:
   - conda-forge
 dependencies:
   - ipywidgets=7.6.5
-  - jupyterlab=3.2.4
+  - jupyterlab=3.4.6
   - jupyterlab-plotly-extension=1.0.0
   - jupyterlab-spellchecker=0.7.2
-  - matplotlib=3.5.0
-  - numpy=1.21.4
-  - pandas=1.3.4
-  - pip=21.0.1
-  - plotly=5.4.0
-  - python=3.8.8
-  - pytorch==1.10.0
-  - scipy=1.7.3
+  - matplotlib=3.5.3
+  - numpy=1.23.2
+  - pandas=1.4.4
+  - pip=22.2.2
+  - plotly=5.11.0
+  - python=3.8.12
+  - pytorch=1.10.0
+  - scipy=1.9.1
   - seaborn=0.11.2
-  - statsmodels=0.11.1
+  - statsmodels=0.13.2
   - pip:
-    - tensorflow-cpu==2.7.0
-    - pmdarima==1.8.4
-    - scikit-learn==1.0.1
-    - pystan==2.19.1.1
-    - prophet==1.0.1
-    - forecast-tools==0.1.6
+    - tensorflow-cpu==2.11.0
+    - pmdarima==2.0.2
+    - scikit-learn==1.2.0
+    - prophet==1.1.1
+    - forecast-tools==0.1.7
+
