--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -2,23 +2,23 @@ name: hds_forecast
 channels:
   - conda-forge
 dependencies:
-  - ipywidgets=8.1.1
-  - jupyterlab=4.0.9
+  - ipywidgets=8.1.3
+  - jupyterlab=4.2.4
   - jupyterlab-plotly-extension=1.0.0
   - jupyterlab-spellchecker=0.8.4
-  - matplotlib=3.8.2
-  - numpy=1.26.2
-  - pandas=2.1.4
-  - pip=23.3.1
-  - plotly=5.18.0
-  - python=3.10.13
-  - scipy=1.11.4
-  - seaborn=0.13.0
-  - statsmodels=0.14.0
+  - matplotlib=3.9.1
+  - numpy=1.26.4
+  - pandas=2.2.2
+  - pip=24.0
+  - plotly=5.23.0
+  - pmdarima=2.0.4
+  - python=3.11
+  - scipy=1.14.0
+  - seaborn=0.13.2
+  - statsmodels=0.14.2
   - pip:
-    - tensorflow-cpu==2.14.0
-    - pmdarima==2.0.4
-    - scikit-learn==1.3.2
+    - tensorflow-cpu==2.15.0
+    - scikit-learn==1.5.1
     - prophet==1.1.5
-    - forecast-tools==0.2.1
+    - forecast-tools==0.3.0
 
